# ray_tracer

hw/: CMakeLists.txt  setvars.sh
hw/src/: main.cpp  primatives.cpp  primatives.h  util.h
